// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReferenceItem /> should render when [organism='virus'] and [progress=32] 1`] = `
<Item__StyledReferenceItem>
  <ReferenceItemHeader
    createdAt="2018-01-01T00:00:00.000000Z"
    id="foo"
    name="Foo"
    organism="virus"
    userId="bob"
  />
  <Item__ReferenceItemBody>
    <ReferenceItemOrigin
      clonedFrom={
        Object {
          "id": "clonedFrom",
        }
      }
      importedFrom={
        Object {
          "id": "importedFrom",
        }
      }
      remotesFrom={
        Object {
          "id": "remotesFrom",
        }
      }
    />
    <ReferenceItemBuild
      id="foo"
      latestBuild={
        Object {
          "id": "bar",
        }
      }
      progress={32}
    />
  </Item__ReferenceItemBody>
  <ReferenceItemProgress
    now={32}
  />
</Item__StyledReferenceItem>
`;

exports[`<ReferenceItem /> should render when [organism=null] 1`] = `
<Item__StyledReferenceItem>
  <ReferenceItemHeader
    createdAt="2018-01-01T00:00:00.000000Z"
    id="foo"
    name="Foo"
    organism={null}
    userId="bob"
  />
  <Item__ReferenceItemBody>
    <ReferenceItemOrigin
      clonedFrom={
        Object {
          "id": "clonedFrom",
        }
      }
      importedFrom={
        Object {
          "id": "importedFrom",
        }
      }
      remotesFrom={
        Object {
          "id": "remotesFrom",
        }
      }
    />
    <ReferenceItemBuild
      id="foo"
      latestBuild={
        Object {
          "id": "bar",
        }
      }
      progress={32}
    />
  </Item__ReferenceItemBody>
  <ReferenceItemProgress
    now={32}
  />
</Item__StyledReferenceItem>
`;

exports[`<ReferenceItem /> should render when [progress=100] 1`] = `
<Item__StyledReferenceItem>
  <ReferenceItemHeader
    createdAt="2018-01-01T00:00:00.000000Z"
    id="foo"
    name="Foo"
    organism="virus"
    userId="bob"
  />
  <Item__ReferenceItemBody>
    <ReferenceItemOrigin
      clonedFrom={
        Object {
          "id": "clonedFrom",
        }
      }
      importedFrom={
        Object {
          "id": "importedFrom",
        }
      }
      remotesFrom={
        Object {
          "id": "remotesFrom",
        }
      }
    />
    <ReferenceItemBuild
      id="foo"
      latestBuild={
        Object {
          "id": "bar",
        }
      }
      progress={100}
    />
  </Item__ReferenceItemBody>
  <ReferenceItemProgress
    now={100}
  />
</Item__StyledReferenceItem>
`;
